--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clean Embed</title>
+  <title>Oliver Gruber – Los Angeles Actor - Portfolio</title>
+  
+  <!-- SEO -->
+  <meta name="description" content="Oliver Gruber – Los Angeles actor working internationally in Munich and Rome. Represented by American Artists Group Talent Agency." />
+  <meta name="keywords" content="Oliver Gruber, actor, SAG-AFTRA, Munich, Rome, Los Angeles, IMDb, talent agency, film, television, acting" />
+  <meta name="author" content="Oliver Gruber" />
+
+  <!-- Open Graph (for Facebook, LinkedIn, etc) -->
+  <meta property="og:title" content="Oliver Gruber – Actor & SAG-AFTRA Performer" />
+  <meta property="og:description" content="Check out Oliver Gruber’s official website – international actor based in Los Angeles." />
+  <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" /> <!-- optional -->
+  <meta property="og:url" content="https://oligruber.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Oliver Gruber – Actor & SAG-AFTRA Performer" />
+  <meta name="twitter:description" content="Visit Oliver Gruber’s official site to view media, bio, contact info, and more." />
+  <meta name="twitter:image" content="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" /> <!-- optional -->
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+
   <style>
     html, body {
       margin: 0;
@@ -21,17 +43,17 @@
 
     iframe {
       position: absolute;
-      top: -50px; /* Moves the iframe up to hide banner */
+      top: -50px;
       left: 0;
       width: 100vw;
-      height: calc(100vh + 50px); /* Compensate for moved frame */
+      height: calc(100vh + 50px);
       border: none;
     }
   </style>
 </head>
 <body>
   <div class="iframe-wrapper">
-    <iframe src="https://golivegan.wixsite.com/olivergruber" title="Go Vegan – Oliver Gruber"></iframe>
+    <iframe src="https://golivegan.wixsite.com/olivergruber" title="Oliver Gruber – Official Site" allowfullscreen></iframe>
   </div>
 </body>
 </html>
