--- a/index.html
+++ b/index.html
@@ -2,29 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Oliver Gruber – Los Angeles Actor - Portfolio</title>
-  
-  <!-- SEO -->
-  <meta name="description" content="Oliver Gruber – Los Angeles actor working internationally in Munich and Rome. Represented by American Artists Group Talent Agency." />
-  <meta name="keywords" content="Oliver Gruber, actor, SAG-AFTRA, Munich, Rome, Los Angeles, IMDb, talent agency, film, television, acting" />
-  <meta name="author" content="Oliver Gruber" />
+  <title>Oliver Gruber – Actor & Global Talent | Official Website</title>
 
-  <!-- Open Graph (for Facebook, LinkedIn, etc) -->
-  <meta property="og:title" content="Oliver Gruber – Actor & SAG-AFTRA Performer" />
-  <meta property="og:description" content="Check out Oliver Gruber’s official website – international actor based in Los Angeles." />
-  <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" /> <!-- optional -->
+  <!-- SEO -->
+  <meta name="description" content="Oliver Gruber – Los Angeles-based screen actor working internationally in Munich and Rome. Represented by American Artists Group Talent Agency." />
+  <meta name="keywords" content="Oliver Gruber, actor, global talent, screen actor, Munich, Rome, Los Angeles, IMDb, talent agency, film, television, acting" />
+  <meta name="author" content="Oliver Gruber" />
+  <link rel="canonical" href="https://oligruber.com/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Oliver Gruber – Actor & Global Talent | Official Website" />
+  <meta property="og:description" content="Check out Oliver Gruber’s official website – international screen actor based in Los Angeles." />
+  <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" />
   <meta property="og:url" content="https://oligruber.com" />
   <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Oliver Gruber Official" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Oliver Gruber – Actor & SAG-AFTRA Performer" />
+  <meta name="twitter:title" content="Oliver Gruber – Actor & Global Talent | Official Website" />
   <meta name="twitter:description" content="Visit Oliver Gruber’s official site to view media, bio, contact info, and more." />
-  <meta name="twitter:image" content="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" /> <!-- optional -->
+  <meta name="twitter:image" content="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" />
+
+  <!-- Preload preview image -->
+  <link rel="preload" as="image" href="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/favicon.png" />
+
+  <!-- Preconnect -->
+  <link rel="preconnect" href="https://golivegan.wixsite.com" crossorigin />
 
   <style>
     html, body {
@@ -41,27 +50,31 @@
       overflow: hidden;
     }
 
-  iframe {
-  position: absolute;
-  top: -70px; /* hide more of the top */
-  left: 0;
-  width: 100vw;
-  height: calc(100vh + 70px); /* adjust height accordingly */
-  border: none;
-}
+    iframe {
+      position: absolute;
+      top: -70px;
+      left: 0;
+      width: 100vw;
+      height: calc(100vh + 70px);
+      border: none;
+    }
 
-@media (max-width: 768px) {
-  iframe {
-    top: -90px;
-    height: calc(100vh + 90px);
-  }
-}
-
+    @media (max-width: 768px) {
+      iframe {
+        top: -90px;
+        height: calc(100vh + 90px);
+      }
+    }
   </style>
 </head>
 <body>
   <div class="iframe-wrapper">
-    <iframe src="https://golivegan.wixsite.com/olivergruber" title="Oliver Gruber – Official Site" allowfullscreen></iframe>
+    <iframe 
+      src="https://golivegan.wixsite.com/olivergruber" 
+      title="Oliver Gruber – Official Site" 
+      allowfullscreen 
+      aria-hidden="true"
+    ></iframe>
   </div>
 </body>
 </html>
