--- a/index.html
+++ b/index.html
@@ -46,18 +46,22 @@
 
 iframe {
   position: absolute;
-  top: -70px;
+  top: -80px;
   left: 0;
   width: 100%;
-  max-width: 100vw;
-  height: calc(100vh + 70px);
+  height: calc(100vh + 100px);
   border: none;
+  max-width: 100vw;
+  overflow: hidden;
+  touch-action: none;
+  pointer-events: auto;
+  -webkit-overflow-scrolling: none;
 }
 
 @media (max-width: 768px) {
   iframe {
-    top: -90px;
-    height: calc(100vh + 90px);
+    top: -100px;
+    height: calc(100vh + 120px);
     position: fixed;
   }
 }
@@ -67,7 +71,14 @@ iframe {
 </head>
 <body>
   <div class="iframe-wrapper">
-    <iframe src="https://golivegan.wixsite.com/olivergruber" title="Oliver Gruber – Official Site" allowfullscreen></iframe>
+   <iframe 
+  src="https://golivegan.wixsite.com/olivergruber" 
+  title="Oliver Gruber – Official Site" 
+  allowfullscreen 
+  aria-hidden="true"
+  scrolling="no"
+></iframe>
+
   </div>
 </body>
 </html>
