--- a/index.html
+++ b/index.html
@@ -27,54 +27,53 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
 
   <style>
- html, body {
+   html, body {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
   overflow: hidden;
-  background: #000;
+  background-color: #000; /* fallback to prevent white flash */
 }
 
 .iframe-wrapper {
   position: relative;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  max-width: 100vw;
   overflow: hidden;
 }
 
 iframe {
   position: absolute;
-  top: -120px; /* push banner off-screen */
+  top: -70px;
   left: 0;
   width: 100%;
-  height: calc(100vh + 120px); /* fill extra space */
-  border: none;
   max-width: 100vw;
-  -webkit-overflow-scrolling: touch;
-  overflow-y: scroll;
+  height: calc(100vh + 70px);
+  border: none;
 }
 
 @media (max-width: 768px) {
   iframe {
-    top: -150px;
-    height: calc(100vh + 150px);
+    top: -90px;
+    height: calc(100vh + 90px);
+    position: fixed;
   }
 }
-
 
 
   </style>
 </head>
 <body>
   <div class="iframe-wrapper">
-  <iframe 
+   <iframe 
   src="https://golivegan.wixsite.com/olivergruber" 
-  title="Oliver Gruber – Official Site"
-  allowfullscreen
+  title="Oliver Gruber – Official Site" 
+  allowfullscreen 
   aria-hidden="true"
+  scrolling="no"
 ></iframe>
-
 
   </div>
 </body>
