--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <meta name="keywords" content="Oliver Gruber, actor, SAG-AFTRA, Munich, Rome, Los Angeles, IMDb, talent agency, film, television, acting" />
   <meta name="author" content="Oliver Gruber" />
 
-  <!-- Open Graph -->
+  <!-- Open Graph (for Facebook, LinkedIn, etc) -->
   <meta property="og:title" content="Oliver Gruber – Actor & SAG-AFTRA Performer" />
   <meta property="og:description" content="Check out Oliver Gruber’s official website – international actor based in Los Angeles." />
-  <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" />
+  <meta property="og:image" content="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" /> <!-- optional -->
   <meta property="og:url" content="https://oligruber.com" />
   <meta property="og:type" content="website" />
 
@@ -21,57 +21,53 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Oliver Gruber – Actor & SAG-AFTRA Performer" />
   <meta name="twitter:description" content="Visit Oliver Gruber’s official site to view media, bio, contact info, and more." />
-  <meta name="twitter:image" content="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" />
+  <meta name="twitter:image" content="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" /> <!-- optional -->
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/favicon.png" />
 
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
-      background-color: #000;
-    }
+   html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-color: #000; /* fallback to prevent white flash */
+}
 
-    .iframe-wrapper {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      max-width: 100vw;
-      overflow: hidden;
-    }
+.iframe-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  max-width: 100vw;
+  overflow: hidden;
+}
 
-    iframe {
-      position: absolute;
-      top: -70px;
-      left: 0;
-      width: 100%;
-      height: calc(100vh + 70px);
-      max-width: 100vw;
-      border: none;
-    }
+iframe {
+  position: absolute;
+  top: -70px;
+  left: 0;
+  width: 100%;
+  max-width: 100vw;
+  height: calc(100vh + 70px);
+  border: none;
+}
 
-    @media (max-width: 768px) {
-      iframe {
-        top: -50px; /* Subtle crop for mobile */
-        height: calc(100vh + 50px);
-        position: absolute;
-      }
-    }
+@media (max-width: 768px) {
+  iframe {
+    top: -90px;
+    height: calc(100vh + 90px);
+    position: fixed;
+  }
+}
+
+
   </style>
 </head>
 <body>
   <div class="iframe-wrapper">
-    <iframe 
-      src="https://golivegan.wixsite.com/olivergruber" 
-      title="Oliver Gruber – Official Site" 
-      allowfullscreen 
-      aria-hidden="true"
-      scrolling="no"
-    ></iframe>
+    <iframe src="https://golivegan.wixsite.com/olivergruber" title="Oliver Gruber – Official Site" allowfullscreen></iframe>
   </div>
 </body>
 </html>
