--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oliver Gruber – Los Angeles Actor - Portfolio</title>
   
+<link rel="canonical" href="https://oligruber.com/" />
+<meta property="og:site_name" content="Oliver Gruber Official Site" />
+<link rel="apple-touch-icon" href="/favicon.png" />
+
+<link rel="preload" as="image" href="https://m.media-amazon.com/images/M/MV5BZGFhOTJiZjgtYWQ0Ny00NWFhLWE1NTUtOTdlNmJjOGRhYTM5XkEyXkFqcGc@._V1_.jpg" />
+
+
   <!-- SEO -->
   <meta name="description" content="Oliver Gruber – Los Angeles actor working internationally in Munich and Rome. Represented by American Artists Group Talent Agency." />
   <meta name="keywords" content="Oliver Gruber, actor, SAG-AFTRA, Munich, Rome, Los Angeles, IMDb, talent agency, film, television, acting" />
